--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 ul {
     list-style: none;
 }
@@ -8,13 +12,24 @@ body {
     background-color: rgb(219, 219, 219);
     display: flex;
     justify-content: center;
-    height: 100vh;
     align-items: center;
+}
+.slider__container {
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+	height: 500px;
+    background-color: rebeccapurple;
+}
+.slide {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	transition: all 0.5s ease;
 }
 .wrapper {
     background-color: rgb(255, 255, 255);
     width: 1400px;
-    height: 90vh;
     justify-content: space-between;
 }
 .main__hero {
@@ -44,4 +59,7 @@ body {
     padding: 15px 20px;
     border-radius: 5px;
     min-height: 280px;
+}
+.overflow {
+    background-color: rebeccapurple;
 }
